--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,22 @@
 .App {
     --header_height: 60px;
+    width: 1280px;
+    margin: auto;
 }
 
 .hw {
+    padding: 50px;
+    border: 1px solid #D9D9D9;
+}
 
+.hw > div {
+    margin-bottom: 15px;
 }
 
 .hwTitle {
-
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 27px;
+    text-align: left;
+    margin: 131px auto 10px 50px;
 }
