--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,22 +1,47 @@
 .greetingForm {
+    font-family: Montserrat, sans-serif;
 }
 
 .inputAndButtonContainer {
+    display: flex;
 }
 
 .error {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    margin-top: 10px;
+    color: #CC0000;
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    margin-right: 10px;
+    padding: 10px;
 }
 
 .input:focus {
+    border-color: #D1D1D1;
 }
 
 .errorInput {
+    width: 372px;
+    height: 36px;
+    border: 1px solid #CC0000;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 
 .button {
+    width: 78px;
+    height: 36px;
+    color: white;
+    background-color: #0066CC;
+    border-radius: 3px;
+    border: none;
 }
 
 .button:focus {
@@ -26,10 +51,18 @@
 }
 
 .button:disabled {
+    opacity: 50%;
 }
 
 .text {
+    font-weight: 400;
+    opacity: 50%;
+    margin-bottom: 10px;
 }
 
 .greeting {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 10px;
 }
