--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -2,7 +2,21 @@
 }
 
 .header {
+    width: 1280px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #1D21261A;
+    box-shadow: 0px 0px 2px 0px #1D21261A;
+    padding: 0 50px;
+
 }
 
 .header h1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
 }
