--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,24 +1,62 @@
 .sidebar {
+    display: none;
 }
 
 .sidebar.open {
+    width: 317px;
+    height: 100vh;
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    padding: 16px;
 }
 
 .background {
+    display: block;
+    width: 100vw;
+    background-color: #000000;
+    opacity: 0.3;
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-left: 70px;
 }
 
 .nav a {
+    padding-top: 70px;
+    text-decoration: none;
 }
 
 .nav a:hover {
+    color: #58ACFF;
+
 }
 
 .nav a.active {
+    color: #0059B2;
+    border-bottom: #0059B2;
 }
+
 .close {
+    width: 24px;
+    height: 24px;
+    margin-left: auto;
+    border: none;
+    background-color: white;
 }
 
 .close img {
