--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,11 +1,16 @@
 .spanBlock {
+    display: flex;
+    align-items: center;
 }
 
 .span {
+
 }
 
 .input {
+
 }
 
 .pen {
+    margin-right: 15px;
 }
