--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,27 @@
 .select {
+    width: 165px;
+    height: 24px;
+    flex-shrink: 0;
+
+    border-radius: 2px;
+    border: 1px solid #C2C2C2;
+    background: #FFF;
+
+    color: #000;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-left: 10px;
 }
 
 .select:focus {
+    border-radius: 2px;
+    border: 1px solid #000;
+    background: #FFF;
 }
 
 
 .option:hover {
+    background: #1E90FF;
 }
